--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assests/css/style.css">
-    <title>Document</title>
+    <title>Sneaker Central</title>
 </head>
 <body>
+    <header><h1>Sneaker Central</h1></header>
    
     <script src ="assests/js/style.js"></script>
 </body>
