add basic structure and try to add images to both sides of h1

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 </head>
 <body>
     <header><h1>Sneaker Central</h1></header>
+
+    <div class= "game">
+
+    </div>
+
+    <div class="score">
+        
+    </div>
    
     <script src ="assests/js/style.js"></script>
 </body>
