add structure and delete images

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 </head>
 <body>
     <header><h1>Sneaker Central</h1></header>
+    <h2>So you are a sneakerhead?</h2>
+    <p>Test some of your knowledge below..</p>
 
-    <div class= "game">
-
-    </div>
-
+    <div class= "game"></div>
+<p>Questions</p>
     <div class="score">
-        
+        <p class="score_num">Correct Answers <span id="correct">0</span></p>
+        <p class="score_num">Incorrect Answers <span id="incorrect">0</span></p>
     </div>
    
     <script src ="assests/js/style.js"></script>
