--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Sneaker Central</title>
 </head>
 <body>
+    <span><img src="../pp2/assests/images/sneakercentralright1.jpg" alt=""></span>
     <header><h1>Sneaker Central</h1></header>
     <h2>So you are a sneakerhead?</h2>
     <p>Test some of your knowledge below..</p>
