add more images

--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
 
     <div class= "game"></div>
 <p>Questions</p>
+<div class="options">
+<span id="option1"><button type="button" class="button">Option1</button></span>
+<span id="option2"><button class="button">Option2</button></span>
+</div>
+<div class="options">
+    <span id="option3"><button class="button">Option3</button></span>
+    <span id="option4"><button class="button">Option4</button></span>
+</div>
     <div class="score">
         <p class="score_num">Correct Answers <span id="correct">0</span></p>
         <p class="score_num">Incorrect Answers <span id="incorrect">0</span></p>
