--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
     <title>Sneaker Central</title>
 </head>
 <body>
+    <!--Header for page -->
     <header><h1>Sneaker Central</h1></header>
     <h2>So you are a sneakerhead?</h2>
     <p>Test some of your knowledge below..</p>
     
 
     <div class= "game"></div>
+    <!--Question area -->
 <p>Questions</p>
 <div class="options">
+    <!--4 options for answers -->
 <span id="option1"><button type="button" class="button">Option1</button></span>
 <span id="option2"><button class="button">Option2</button></span>
 </div>
@@ -24,6 +27,7 @@
     <span id="option4"><button class="button">Option4</button></span>
 </div>
     <div class="score">
+        <!--Score Area -->
         <p class="score_num">Correct Answers <span id="correct">0</span></p>
         <p class="score_num">Incorrect Answers <span id="incorrect">0</span></p>
     </div>
